# trec_rag_2025

./: .env.example  .gitignore  HANDOFF.md  README.md  SETUP.md  pyproject.toml
configs/nli/: deberta_scifive.yaml  (+1 more)
docs/: build_presentation.vba  build_short_presentation.vba  phase2_report.md  resumo_para_leigos.md
reports/: _bootstrap_ci_cot_mini.md  _bootstrap_ci_cot_together.md  _records_alpha_3way.json  judge_intersection_analysis.md  llm_judge_calibration.md  llm_judge_multi_backend.md  llm_judge_topical_bias.md  llm_judge_validation.md  llm_judge_validation_openai-4o.md  llm_judge_validation_openai-mini.md  llm_judge_validation_openai-mini_cot.md  llm_judge_validation_qwen.md  llm_judge_validation_together_cot.md  per_topic_error_analysis.md  phase1_2025_calibrated.md  phase1_gap_analysis.md  phase1_gap_analysis.template.md  phase2_summary.md  phase2_summary_commentary.md  pool_coverage_analysis.md
scripts/: baseline_check.sh  bootstrap_concordance_ci.py  bootstrap_intersection_ci.py  build_dense_index.sh  build_indexes.sh  build_qrels_2024.py  build_qrels_2025.py  download_pubmed.sh  judge_calibration.py  judge_cot_probe.py  judge_disagreement_examples.py  llm_judge_topical_analysis.py  multi_backend_concordance.py  per_topic_diff.py  pool_coverage_analysis.py  run_starter_baseline.sh  select_top5m_loop.sh  select_top5m_pmids.py  vendor_starter_kit.sh
tests/: test_bm25_roundtrip.py  test_calibration.py  test_concordance.py  test_dense_smoke.py  test_intersection_pool.py  test_judge_checkpoint.py  test_judge_expand_pool.py  test_judge_expanded_qrels_shape.py  test_judge_prompts.py  test_judge_rejudge_multibackend.py  test_judge_robustness.py  test_judge_validator.py  test_krippendorff.py  test_llm_prf.py  test_llm_rewrite.py  test_metadata_phase2.py  test_metrics.py  test_negation_cues.py  test_parse_pubmed.py  test_per_topic.py  test_per_topic_diff.py  test_phase2_variants.py  test_pool_coverage.py  test_rrf.py  test_smoke_pipeline.py  test_submission.py  test_topics_and_qrels.py
(+85 files in other folders)
