[project]
name = "trec-biogen"
version = "0.1.0"
description = "TREC BioGEN 2025 Task A — local Phase 1 baseline pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "pedrofgsoares" }]

dependencies = [
    # Retrieval
    "pyserini==0.43.0",
    "faiss-cpu==1.9.0",

    # NLI / rerank
    "torch==2.4.1",
    "transformers==4.46.3",
    "sentence-transformers==3.3.1",
    "accelerate==1.1.1",

    # Biomedical NLP
    "spacy==3.7.5",
    "scispacy==0.5.4",
    "negspacy==1.0.4",

    # Pipeline plumbing
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "loguru==0.7.2",
    "mlflow==2.18.0",

    # Data IO
    "polars==1.18.0",
    "pyarrow==18.1.0",
    "duckdb==1.1.3",
    "orjson==3.10.13",

    # Preflight
    "psutil==6.1.1",

    # LLM-judge HTTP client (Phase 2 §2; OpenAI + Together.ai chat completions)
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "ipython==8.30.0",
]

[project.scripts]
biogen-parse = "trec_biogen.ingest.parse_pubmed:main"
biogen-run-task-a = "trec_biogen.pipeline.run_task_a:main"
biogen-eval = "trec_biogen.eval.metrics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trec_biogen"]

# Torch is shipped from PyTorch's own index; everything else from PyPI.
# Driver is CUDA 12.8 on host, but PyTorch 2.4.1 + cu121 wheels are
# forward-compatible (CUDA driver is backward-compatible with older toolkit).
[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
